<resources>
    <string name="app_name">Pikisubs</string>

    <string name="title_dialog_source">Source</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_source">Add source</string>

    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>

    <string name="menu_movies">Movies</string>
    <string name="menu_tv_shows">TV Shows</string>
    <string name="menu_videos_no_subs">Videos without subs</string>
    <string name="menu_videos_subs">Videos with subs</string>
    <string name="menu_sources">Sources</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_servers">Servers</string>

    <string name="title_activity_subtitles">Subtitles</string>

    <string name="message_no_files">There are no subtitles in the downloaded file</string>
    <string name="message_many_files">Cannot process files with many subtitles yet... Sorry.</string>
    <string name="message_subs_uploaded">Subtitles uploaded!</string>

    <string name="title_dialog_many_subs">Please select subtitle from archive</string>
    <string name="message_cannot_download">Problem processing file %s</string>
    <string name="message_searching_in">Searching in %s</string>
    <string name="title_progress_videos">Loading videos</string>
    <string name="message_wait_please">Wait please...</string>
    <string name="title_progress_subtitles">Searching subtitles</string>
    <string name="title_progress_subtitle_download">Downloading subtitle</string>
    <string name="label_filename">Filename</string>
    <string name="label_search_text">Search text</string>
    <string name="needs_subs">Needs subs!</string>
    <string name="watched">Watched</string>
    <string name="not_watched">Not watched</string>
    <string name="action_refresh">Refresh</string>
    <string name="message_getting_videos">Getting videos from sources</string>
    <string name="message_guessing_videos">Getting videos metadata</string>
    <string name="message_updating_local_db">Updating local DB</string>
    <string name="message_getting_posters">Getting posters</string>
    <string name="empty_string" />
    <string name="title_dialog_video_actions">Video actions</string>

    <string name="video_action_edit_title">Edit title</string>
    <string name="video_action_play">Play</string>
    <string name="video_action_play_trailer">Play trailer</string>
    <string name="video_action_download_subs">Download subtitles</string>
    <string name="video_action_needs_subs">Needs subtitles</string>
    <string name="video_action_not_needs_subs">Doesn\'t need subtitles</string>
    <string name="video_action_set_watched">Set as watched</string>
    <string name="video_action_set_unwatched">Set as unwatched</string>

    <string name="filter_all">Show all</string>
    <string name="filter_watched">Only watched</string>
    <string name="filter_not_watched">Only not watched</string>

    <string name="title_dialog_video_server">Video server</string>
    <string name="action_add">Add</string>
    <string name="server_hostname_or_ip">Hostname or IP</string>
    <string name="server_username">Server username</string>
    <string name="server_password">Server password</string>
    <string name="server_http_url">HTTP URL</string>
    <string name="server">Server</string>
    <string name="absolutePath">Path</string>
    <string name="video_type">Video type</string>
    <string name="http_path">HTTP Path</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="title_progress_trailer">Looking for trailers</string>
    <string name="message_progress_trailer">Wait a moment please...</string>
    <string name="movieFilter">Filter</string>
    <string name="title_dialog_videos_filter">Filter videos by</string>
    <string name="title_dialog_edit_title">Edit video title</string>
    <string name="button_ok">OK</string>
    <string name="title_progress_tv_shows">Loading TV shows</string>
    <string name="title_activity_episodes">Episodes</string>
    <string name="season_episode">Season %1$d, episode %2$s.</string>
    <string name="title_dialog_set_tmdb_id">Set TMDb ID</string>
    <string name="title_dialog_get_tmdb_movie">Contacting TMDb</string>
    <string name="video_action_set_tmdb_id">Set TMDb ID</string>
    <string name="menu_rescan">Re-scan collection</string>
    <string name="message_rescanning_db">Re-scanning videos</string>
    <string name="message_cleaning_local_db">Cleaning local DB</string>
    <string name="unknown">Unknown</string>
    <string name="message_select_option">Select which one</string>
    <string name="video_action_identify_video">Wrong video</string>
    <string name="title_video_info">Technical info</string>
    <string name="filename">filename</string>
    <string name="title">title</string>
    <string name="episode_number">episode number</string>
    <string name="series_title">series title</string>
    <string name="poster_path">poster path</string>
    <string name="absolute_path">absolute path</string>
    <string name="path_relative_to_source">path relative to source</string>
    <string name="object_id">Object ID</string>
    <string name="video_source_object_id">video source object id</string>
    <string name="season_number">season number</string>
    <string name="tmdb_id">TMDb ID</string>
    <string name="title_to_show">title to show</string>
    <string name="poster_url">poster URL</string>
    <string name="series_title_to_show">series title to show</string>
    <string name="suggested_search_text">suggested search text</string>
    <string name="has_subs">has subs</string>
    <string name="is_watched">is watched</string>
    <string name="video_action_show_info">Technical info</string>
    <string name="info_needs_subs">needs subs</string>
    <string name="video_action_delete_video">Delete</string>
    <string name="title_confirm_dialog">Are you sure?</string>
    <string name="confirm_delete">Delete %1$s?</string>
    <string name="message_getting_episode_info">Getting info for %1$s</string>
    <string name="video_action_get_videos_info">Get episodes info</string>
    <string name="message_error_getting_info">Error getting episode info</string>
    <string name="email">e-mail</string>
    <string name="password">Password</string>
    <string name="title_wait_please">Wait please</string>
    <string name="signing_up">Signing up...</string>
    <string name="button_sign_up">New user. Sign up</string>
    <string name="button_sign_in">Existing user. Sign in</string>
    <string name="signing_in">Signing in...</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="message_loading_data">Loading data</string>
    <string name="message_no_data">No data to display</string>
    <string name="message_contacting_server">Contacting server</string>
    <string name="suggest_episodes">Suggest next episodes</string>
    <string name="title_dialog_suggest_episodes">Next episodes</string>
    <string name="message_removing_duplicates">Removing duplicates</string>
    <string name="menu_fetch_new">Fetch new videos</string>
    <string name="menu_upload_collection">Upload collection to Parse</string>
    <string name="menu_download_collection">Download collection from Parse</string>
    <string name="title_cleaning_parse">Cleaning Parse objects</string>
    <string name="title_uploading_servers">Uploading servers to Parse.com</string>
    <string name="title_uploading_sources">Uploading sources to Parse.com</string>
    <string name="title_uploading_videos">Uploading videos to Parse.com</string>
    <string name="message_getting_all_objects">Getting all objects from Parse.com</string>
    <string name="message_deleting_all_objects">Deleting all objects from Parse.com</string>
    <string name="message_downloading_servers">Downloading servers</string>
    <string name="message_downloading_sources">Downloading sources</string>
    <string name="message_downloading_videos">Downloading videos</string>
</resources>
