<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:touchscreenBlocksFocus="false"
    android:soundEffectsEnabled="true">

    <TextView
        android:id="@+id/textEmail"
        android:text="@string/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editEmail"
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textPassword"
        android:text="@string/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonSignIn"
        android:text="@string/button_sign_in"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonSignUp"
        android:text="@string/button_sign_up"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
